upgrade to pgpainless 1.6.7 with basic modules support